--- a/templates/episode.html
+++ b/templates/episode.html
@@ -94,8 +94,8 @@
     <hr>
     <footer>
         <div>
-            <a href="https://github.com/TechShreyash" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY TECH
-                SHREYASH</a> <a href="https://TechZBots.t.me" target="_blank">(@TechZBots)</a>
+             <a href="https://t.me/bloody_mikey" target="_blank">ᴏᴡɴᴇᴅ ʙʏ ᴍɪᴋᴇʏ <i class="fa fa-heart pulse"></i> 
+                 ᴀʟʟ ʀɪɢʜᴛ ʀᴇsᴇʀᴠᴇᴅ -</a> <a href="https://psycho_association.t.me" target="_blank">ᴘsʏᴄʜᴏ ɴᴇᴛᴡᴏʀᴋ</a>
         </div>
     </footer>
     <hr>
