--- a/templates/anime.html
+++ b/templates/anime.html
@@ -4,13 +4,13 @@
 <head>
     <link rel="icon" type="image/x-icon"
         href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/favicon.ico">
-    <title>Watch {{ title }} - AnimeDex</title>
+    <title>Watch {{ title }} - AnimeCafeZ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="title" content="Watch {{ title }} - AnimeDex">
+    <meta name="title" content="Watch {{ title }} - AnimeCafeZ">
     <meta name="description"
         content="Watch {{ title }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta name="keywords"
-        content="{{ title }},animedex, anime dex, hindi dub, hindi sub, english dub, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animefrenzy, animekisa">
+        content="{{ title }},AnimeCafeZ, AnimeCafeZ, hindi dub, hindi sub, english dub, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animefrenzy, animekisa">
     <meta name="charset" content="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1">
     <meta name="robots" content="index, follow">
@@ -18,7 +18,7 @@
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Language" content="en">
-    <meta property="og:title" content="Watch {{ title }} - AnimeDex">
+    <meta property="og:title" content="Watch {{ title }} - AnimeCafeZ">
     <meta property="og:description"
         content="Watch {{ title }} free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta property="og:locale" content="en_US">
