--- a/templates/home.html
+++ b/templates/home.html
@@ -4,13 +4,13 @@
 <head>
     <link rel="icon" type="image/x-icon"
         href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/favicon.ico">
-    <title>AnimeDex - Watch High Quality Anime Online</title>
+    <title>AnimeCafeZ - Watch High Quality Anime Online</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
     <meta name="title" content="AnimeDex - Watch High Quality Anime Online" />
     <meta name="description"
-        content="AnimeDex - Watch High Quality Anime Online. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
+        content="AnimeCafeZ - Watch High Quality Anime Online. You can watch anime online free in HD without Ads. Best place for free find and one-click anime." />
     <meta name="keywords"
-        content="anime dex, animedex, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animedex, animekisa" />
+        content="AnimeCafeZ, AnimeCafeZ, watch anime online, free anime, anime stream, anime hd, english sub, kissanime, gogoanime, animeultima, 9anime, 123animes, animefreak, vidstreaming, gogo-stream, animekisa, zoro.to, gogoanime.run, animedex, animekisa" />
     <meta name="charset" content="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1" />
     <meta name="robots" content="index, follow" />
@@ -18,9 +18,9 @@
     <meta name="revisit-after" content="1 days" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
     <meta http-equiv="Content-Language" content="en" />
-    <meta property="og:title" content="AnimeDex - Watch High Quality Anime Online">
+    <meta property="og:title" content="AnimeCafeZ - Watch High Quality Anime Online">
     <meta property="og:description"
-        content="AnimeDex - Watch High Quality Anime Online. You can watch anime online free in HD without Ads. Best place for free find and one-click anime.">
+        content="AnimeCafeZ - Watch High Quality Anime Online. You can watch anime online free in HD without Ads. Best place for free find and one-click anime.">
     <meta property="og:locale" content="en_US">
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="AnimeDex">
@@ -87,8 +87,8 @@
     <hr>
     <footer>
         <div>
-            <a href="https://github.com/TechShreyash" target="_blank">MADE WITH <i class="fa fa-heart pulse"></i>BY TECH
-                SHREYASH</a> <a href="https://TechZBots.t.me" target="_blank">(@TechZBots)</a>
+             <a href="https://t.me/bloody_mikey" target="_blank">ᴏᴡɴᴇᴅ ʙʏ ᴍɪᴋᴇʏ <i class="fa fa-heart pulse"></i> 
+                 ᴀʟʟ ʀɪɢʜᴛ ʀᴇsᴇʀᴠᴇᴅ -</a> <a href="https://psycho_association.t.me" target="_blank">ᴘsʏᴄʜᴏ ɴᴇᴛᴡᴏʀᴋ</a>
         </div>
     </footer>
     <hr>
