--- a/templates/vid.html
+++ b/templates/vid.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="icon" type="image/x-icon" href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/favicon.ico">
-    <title>AnimeDex VideoPlayer</title>
+    <title>AnimeCafeZ VideoPlayer</title>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
