--- a/templates/episode.html
+++ b/templates/episode.html
@@ -4,9 +4,9 @@
 <head>
     <link rel="icon" type="image/x-icon"
         href="https://cdn.jsdelivr.net/gh/TechShreyash/AnimeDex@main/static/img/favicon.ico">
-    <title>Watch Episode {{ title }} - {{ heading }} - AnimeDex</title>
+    <title>Watch Episode {{ title }} - {{ heading }} - AnimeCafeZ</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-    <meta name="title" content="Watch Episode {{ title }} - {{ heading }} - AnimeDex">
+    <meta name="title" content="Watch Episode {{ title }} - {{ heading }} - AnimeCafeZ">
     <meta name="description"
         content="Watch Episode {{ title }} - {{ heading }} - AnimeDex free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta name="keywords"
@@ -18,7 +18,7 @@
     <meta name="revisit-after" content="1 days">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta http-equiv="Content-Language" content="en">
-    <meta property="og:title" content="Watch Episode {{ title }} - {{ heading }} - AnimeDex">
+    <meta property="og:title" content="Watch Episode {{ title }} - {{ heading }} - AnimeCafeZ">
     <meta property="og:description"
         content="Watch Episode {{ title }} - {{ heading }} - AnimeDex free anime online and it's latest episodes on AnimeDex. We provide free anime online experience without ads, signing up or downloading.">
     <meta property="og:locale" content="en_US">
